--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "🎨 Static web UI components of toshiki-proxypool mirrors of JsDelivr CDN from GitHub, but UNPKG",
   "license": "GPL-3.0 license",
   "version": "0.0.1-beta",
+  "keywords": ["proxypool", "ui", "css", "bulma"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "scss-watch": "sass --watch --no-source-map scss:css -s compressed",
