--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "author": "Anda Toshiki <andatoshiki@outlook.com>",
   "description": "🎨 Static web UI components of toshiki-proxypool mirrors of JsDelivr CDN from GitHub, but UNPKG",
   "license": "GPL-3.0 license",
-  "version": "0.0.1-beta",
-  "keywords": ["proxypool", "ui", "css", "bulma"],
+  "version": "0.0.2",
+  "keywords": [
+    "proxypool",
+    "ui",
+    "css",
+    "bulma"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "scss-watch": "sass --watch --no-source-map scss:css -s compressed",
