--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   },
   "dependencies": {
     "quixote": "^1.0.1"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
