--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -3,6 +3,7 @@ on: push
 
 jobs:
   publish:
+    name: Publish
     runs-on: ubuntu-latest
     steps:
       - name: Check out code and set up Node
