--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -6,15 +6,16 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code and set up Node
-        uses: actions/checkout@v3
+      - name: Set up Node and install deps
+        uses: actions/setup-node@v3
         with:
           node-version: 16
-
+      
+      - name: Check out code into the module directory
+        uses: actions/checkout@v2.3.4
       
       - name: Set up Node and install deps
         run: npm install
-        uses: actions/setup-node@v3
 
       - name: Publish package to gh NPM registry
         run: echo @andatoshiki:registry=https://npm.pkg.github.com > .npmrc
