--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "type": "git",
     "url": "https://github.com/andatoshiki/toshiki-proxypool-ui.git"
   },
-  "dependencies": {
-    "quixote": "^1.0.1"
-  },
+  "dependencies": {},
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   }
