--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "type": "git",
     "url": "https://github.com/andatoshiki/toshiki-proxypool-ui.git"
   },
-  "dependencies": {},
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+  "dependencies": {
+    "bulma": "^0.9.4"
   }
 }
