--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toshiki-proxypool-ui",
+  "name": "andatoshiki/toshiki-proxypool-ui",
   "author": "Anda Toshiki <andatoshiki@outlook.com>",
   "description": "🎨 Static web UI components of toshiki-proxypool mirrors of JsDelivr CDN from GitHub, but UNPKG",
   "license": "GPL-3.0 license",
