refactor: removed publish to gh npm
Co-Authored-By: 安田俊樹 (jp) <107352174+toshikijp@users.noreply.github.com>
Co-Authored-By: chenskiro <61195619+dtpeel@users.noreply.github.com>

--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Set up Node and install deps
         run: npm install
 
-      - name: Publish package to gh NPM registry
-        run: echo @andatoshiki:registry=https://npm.pkg.github.com > .npmrc
+      # - name: Publish package to gh NPM registry
+        # run: echo @andatoshiki:registry=https://npm.pkg.github.com > .npmrc
       
       - name: Publish package to NPM
         uses: JS-DevTools/npm-publish@v1
