--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -3,24 +3,14 @@ on: push
 
 jobs:
   publish:
-    name: Publish
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Node and install deps
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16
-      
-      - name: Check out code into the module directory
-        uses: actions/checkout@v2.3.4
-      
-      - name: Set up Node and install deps
-        run: npm install
-
-      # - name: Publish package to gh NPM registry
-        # run: echo @andatoshiki:registry=https://npm.pkg.github.com > .npmrc
-      
-      - name: Publish package to NPM
-        uses: JS-DevTools/npm-publish@v1
+          node-version: 12
+      - run: npm install
+      # - run: npm test
+      - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
