--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Anda Toshiki <andatoshiki@outlook.com>",
   "description": "🎨 Static web UI components of toshiki-proxypool mirrors of JsDelivr CDN from GitHub, but UNPKG",
   "license": "GPL-3.0 license",
-  "version": "0.0.212-alpha",
+  "version": "0.0.212-beta",
   "keywords": [
     "proxypool",
     "ui",
